# auto-scaling-sig

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  setup.cfg
doc/source/: conf.py  index.rst  specs.rst  theory-of-auto-scaling.rst  use-cases.rst
doc/source/media/: OpenStack-Auto-Scaling-Concept-Diagram.plantuml
specs/: template.rst
use-cases/: auto-scaling-with-lifecycle-hook.rst  autoscale-compute-basic-metrics.rst  autoscale-compute-custom-metrics.rst  autoscale-compute-resource-balancing.rst  template.rst
